--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>GitHub testing</title>
     </head>
     <body>
-        This is some example code that I am using to test github
+        This is some example code that I am using to test github.
+        login formed
     </body>
 </html>
